--- a/styles/style.css
+++ b/styles/style.css
@@ -1,16 +1,6 @@
 * {
     box-sizing: border-box;
     /* color:#f1f6fb; */
-
-}
-
-p a, .fill-div a {
-    font-weight: bold;
-    text-decoration: none;
-}
-
-header {
-    width: calc(100vw - 12px);
 }
 
 body {
@@ -20,94 +10,18 @@ body {
     font-family: 'Ubuntu Mono', sans-serif;
 }
 
-/* body::-webkit-scrollbar {
-    display: none;
-} */
-
-nav {
-    background-color: #242427;
-    color:#f1f6fb;
-    /* font-family: 'Ubuntu Mono', monospace; */
-    margin:0px;
-    padding:0px;
+hr {
+    color: #000;
+    size: 20px;
 }
 
-nav h3 {
-    font-family: 'Ubuntu Mono', monospace;
-    margin: 16px 0px;
-    padding-left: 0px;
-    padding-right: 0px;
-}
-
-nav a {
-    color: inherit;
-    text-decoration: none;
-}
-
-nav a:hover {
-    color: inherit
-}
-
-nav input[type=button] {
-    background-color: transparent;
-    color:#f1f6fb;
-    border: none;
-    display: block;
-    font-size: 19px;
-    text-decoration: none;
-    width:100%;
-    height:100%;
-}
-
-nav .row {
-    height:100%;
-    width:100%;
-}
-
-/* NAVIGATION TABS */
-@media screen and (min-width: 1000px) {
-.nav-tab {
-    border-top-left-radius: 50%; 
-    border-top-right-radius: 50%;
-    padding-top: 7px;
-}
-
-.nav-tab input[type=button] {
-    border-top-left-radius: 50%; 
-    border-top-right-radius: 50%;
-}
-
-.nav-tab :hover {
-    background-color: #343438;
-}
-
-.nav-tab-selected {
-    color: #242427;
-    font-weight: bold;
-    padding-top: 7px;
-}
-
-.nav-tab-selected input[type=button] {
-    background-color: #fefff8;
-    border-top-left-radius: 50%; 
-    border-top-right-radius: 50%;
-    color: #242427;
-    font-weight: bold;
-}
-
-.nav-tab-selected input[type=button] :hover{
-    color: #242427;
-    font-weight: bold;
-}
-}
-/* END NAVIGATION TABS */
-
-/* CONTENT */
 .content {
     /* background-color: #111112; */
-    background-color: #fefff8;
+    background-color: #ffffff;
+    color: #1f1f1f;
     /* font-family:"Ubuntu Mono", monospace; */
-    font-family: "Source Sans Pro", sans-serif;
+    font-family: "Comfortaa", cursive;
+    font-weight: 400;
     padding-top: 40px;
     padding-right: 7.5%;
     padding-left: 7.5%;
@@ -115,32 +29,17 @@ nav .row {
     width: 100vw
 }
 
-.content i {
-    font-weight: bold;
-}
-
-.content p, i, b {
-    font-size: 19px;
-}
-
-.content h1 {
-    margin-bottom: 30px;
-}
-
-.content .row {
-    margin-bottom: 25px;
-}
-
 .intro-card {
     font-family: "Ubuntu Mono", monospace;
-}
-
-.fill-div {
-    height: calc(100vh - 66px);
+    height: 100vh;
+    padding-top:15vh;
     width: 100vw;
 }
 
-/* styling for fade-in on index.html */
+.intro-card button {
+    width: 130px;
+}
+
 .fade-in {
     animation: fadeIn 6s;
     -webkit-animation: fadeIn 6s;
@@ -148,23 +47,57 @@ nav .row {
     -o-animation: fadeIn 6s;
     -ms-animation: fadeIn 6s;
 }
+
 @keyframes fadeIn {
-    0% { opacity: 0; }
-    100% { opacity: 1; }
+    0% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
 }
+
 @-moz-keyframes fadeIn {
-    0% { opacity: 0; }
-    100% { opacity: 1; }
+    0% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
 }
+
 @-webkit-keyframes fadeIn {
-    0% { opacity: 0; }
-    100% { opacity: 1; }
+    0% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
 }
+
 @-o-keyframes fadeIn {
-    0% { opacity: 0; }
-    100% { opacity: 1; }
+    0% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
 }
+
 @-ms-keyframes fadeIn {
-    0% { opacity: 0; }
-    100% { opacity: 1; }
+    0% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
+}
+
+.portfolio-page {
+    padding-top: 45px;
 }
